# competitive_programming

./: '  .gitignore  .gitmodules  Cargo.toml  Competitive Programing.code-workspace  README.md  TODO.md  compile_flags.txt  flake.nix  project_config  project_config.json  project_config_linux.json  project_config_mac.json  pyproject.toml  shell.nix  template  topcoder.md
.lsp/.cache/: db.transit.json
Archive/TopCoder SRM # 750/: IdenticalBags.java  (+2 more)
CC/: index.js  nohup.out  package-lock.json  package.json
Cache/: checker  checker.cpp  gen  gen.cpp  interactor  slow  slow.cpp  solution  solution.cpp
Docs/: concept.md
Script/: archive.sh  checker  config.sh  convert.sh  genlib.h  new.sh  reformat.sh  run.sh  run_with_terminal.sh  test_dialog.sh
Task/: interactor  interactor.cpp  solution  solution.cpp
Template/: checker.template  config.template  gen.template  interactor.template  slow.template  solution.template
Testing Lab/: out.out  run.sh  test.cpp
Todo/: CP.md
cc/: index.js  package.json
cpp_template.linux/: gen.template
cpp_template.mac/: gen.template  solution.template
cps_scripts/: TODO.md  archive.sh  config.sh  main.sh  new.sh  project_config  run.sh  run_with_terminal.sh
include/: genlib.hpp  interactive.hpp
output/: .gitignore  solution.cpp
script/: rust_bin_boostrap.py
template/: checker.template  cpp  gen.template  interactor.template  slow.template  solution.template
template.mac/: checker.template  data.json  interactor.template  slow.template  solution.template
utils/: rust_bin_boostrap.py  rust_bin_watchdog.py
(+4883 files in other folders)
