[[bin]]
name = "task_a_atcoder_jumper_solution_rs"
path = "task/A - AtCoder Jumper/solution.rs"

[[bin]]
name = "archive_atcoder_atcoder_grand_contest_048_b_bracket_score_solution_rs"
path = "archive/AtCoder - AtCoder Grand Contest 048/B - Bracket Score/solution.rs"

[package]
name = "competitive-programming"
version = "1.0.0"
edition = "2018"

[dependencies]
